--- a/form.html
+++ b/form.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Forms</title>
+	<link rel="stylesheet" href="../css-reset/reset.css">
+	<link rel="stylesheet" href="style.min.css">
 </head>
-<body>
-	
+<body center>
+	center
 </body>
 </html>
