--- a/form.html
+++ b/form.html
@@ -3,10 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Forms</title>
-	<link rel="stylesheet" href="../css-reset/reset.css">
+	<link rel="stylesheet" href="css-reset/reset.css">
 	<link rel="stylesheet" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="css/form.css">
 </head>
 <body center>
-	center
+	<label class="input" title="Seu Nome">
+		<input type="text" name="user-name" placeholder="Seu nome" class="p5" required>
+	</label>
+	<label title="Site">
+		<input type="url" name="site" placeholder="Seu site" class="p5" value="https://apps.apple.com/br/app/bitmoji/id868077558" required>
+	</label>
 </body>
 </html>
