--- a/buttons.html
+++ b/buttons.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Buttons</title>
-	<link rel="stylesheet" href="css-reset/reset.css">
+	<link rel="stylesheet" href="node_modules/css-reset/reset.css">
 	<link rel="stylesheet" href="styles/buttons-painel.css">
 	<link rel="stylesheet" href="styles/buttons.css">
 	<link rel="stylesheet" href="css/oocss.css">
