--- a/form.html
+++ b/form.html
@@ -3,16 +3,39 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Forms</title>
-	<link rel="stylesheet" href="css-reset/reset.css">
+	<link rel="stylesheet" href="node_modules/css-reset/reset.css">
 	<link rel="stylesheet" href="style.min.css">
-	<link rel="stylesheet" type="text/css" href="css/form.css">
+	<link rel="stylesheet" type="text/css" href="styles/form.css">
 </head>
-<body center>
-	<label class="input" title="Seu Nome">
-		<input type="text" name="user-name" placeholder="Seu nome" class="p5" required>
-	</label>
-	<label title="Site">
-		<input type="url" name="site" placeholder="Seu site" class="p5" value="https://apps.apple.com/br/app/bitmoji/id868077558" required>
-	</label>
+<body >
+	<form>
+		<label class="input" title="Seu Nome">
+			<input type="text" name="user-name" placeholder="Seu nome" class="f22" required>
+		</label>
+
+		<label class="input" title="Seu Nome">
+			<input type="text" name="user-name" placeholder="Seu nome" class="f18" required>
+		</label>
+
+		<label class="input" title="Seu Nome">
+			<input type="text" name="user-name" placeholder="Seu nome" class="f18" required>
+		</label>
+
+		<label class="input" title="Seu Nome">
+			<input type="text" name="user-name" placeholder="Seu nome" class="f16" required>
+		</label>
+
+		<label class="input" title="Seu Nome">
+			<textarea class="f18" placeholder="Assunto" rows="3"></textarea>
+		</label>
+
+		<label class="input" title="Seu Nome">
+			<input type="text" name="user-name" placeholder="Seu nome" class="f15" required>
+		</label>
+
+		<label class="input" title="Seu Nome">
+			<input type="text" name="user-name" placeholder="Seu nome" class="f15" required>
+		</label>
+	</form>
 </body>
 </html>
