--- a/buttons.html
+++ b/buttons.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Buttons</title>
 	<link rel="stylesheet" href="node_modules/css-reset/reset.css">
-	<link rel="stylesheet" href="styles/buttons-painel.css">
-	<link rel="stylesheet" href="styles/buttons.css">
+	<link rel="stylesheet" href="styles/buttons/buttons.css">
 	<link rel="stylesheet" href="css/oocss.css">
 	<link rel="stylesheet" type="text/css" href="icomoon/style.css">
 </head>
