--- a/form.html
+++ b/form.html
@@ -51,31 +51,31 @@
 		</section>
 		<section title="Input Float">
 			<div class="block">
-				<label class="input float f16 white" title="Seu Nome">
+				<label class="input float f18 gray">
 					<input type="text" name="user-name" placeholder="Seu nome" class="field" value="" required>
 					<span class="legend">Escreva seu nome</span>
 				</label>
 			</div>
 			<div class="block">
-				<label class="input float f18 white" title="Seu Nome">
+				<label class="input float f18 gray">
 					<input type="text" name="user-name" placeholder="Seu nome" class="field" value="" required>
 					<span class="legend">Escreva seu nome</span>
 				</label>
 			</div>
 			<div class="block">
-				<label class="input float f20 white" title="Seu Nome">
+				<label class="input float f18 gray">
 					<input type="text" name="user-name" placeholder="Seu nome" class="field" value="" required>
 					<span class="legend">Escreva seu nome</span>
 				</label>
 			</div>
 			<div class="block">
-				<label class="input float f20" title="Seu Nome">
+				<label class="input float f18 gray">
 					<textarea  id="textarea" rows="5" style="line-height: 22px" class="field" placeholder="Seu nome">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</textarea>
 					<span class="legend">Escreva seu nome</span>
 				</label>
 			</div>
 			<div class="block">
-				<label class="select float f22">
+				<label class="select float f18 gray">
 					<span class="field">Escolha o seu estado</span>
 					<div class="menu">
 						<span class="option">Minas Gerais</span>
