--- a/buttons.html
+++ b/buttons.html
@@ -41,10 +41,21 @@
 
 	<h1>btn4</h1>
 	<article>
-		<button class="btn4 p10">Botão</button>
-		<button class="btn4 blue p10">Botão</button>
-		<button class="btn4 pink p10">Botão</button>
-		<button class="btn4 orange p10">Botão</button>
+		<button class="btn4 r3 p10">Botão</button>
+		<button class="btn4 r3 blue p10">Botão</button>
+		<button class="btn4 r3 pink p10">Botão</button>
+		<button class="btn4 r3 orange p10">Botão</button>
+	</article>
+
+	<h1>btn5</h1>
+	<article>
+		<button class="btn5 p15lr p8">Comprar em x12 sem juros</button>
+		<button class="btn5 blue p15lr p8">Comprar em x12 sem juros</button>
+	</article>
+
+	<h1>btn6</h1>
+	<article>
+		<button class="btn6 p15lr p7 f14 f500">Venda na Amazon</button>
 	</article>
 
 	<hr class="m20t">
