--- a/checkbox.html
+++ b/checkbox.html
@@ -82,8 +82,8 @@
 			<span class="legend">Modo Avião size 8 - Default</span>
 		</label>
 		<label>
-			<input type="checkbox" class="switch3 p12 green">
-			<span>Modo Avião size 12</span>
+			<input type="checkbox" class="switch3 small green">
+			<span>Modo Avião size small</span>
 		</label>
 		<label>
 			<input type="checkbox" class="switch3 p13 green">
