--- a/triggers.html
+++ b/triggers.html
@@ -3,11 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Triggers</title>
-	<link rel="stylesheet" href="./sass/cache/trigger.css">
 	<link rel="stylesheet" href="./sass/painels/trigger.css">
-
-	<!-- CUSTOMIZE -->
-	<link rel="stylesheet" href="./sass/cache/base.css">
+	<link rel="stylesheet" href="./style.min.css">
 </head>
 <body>
 	<section class="container">
@@ -18,6 +15,18 @@
 		<div class="tg-error">Error - O pedaço mais habitual do Lorem Ipsum usado desde os anos 1500 é reproduzido abaixo para os interessados</div>
 		<div class="tg-text">Text - O pedaço mais habitual do Lorem Ipsum usado desde os anos 1500 é reproduzido abaixo para os interessados</div>
 	</section>
+
+	<hr>
+	<h2>Tg1</h2>
+	<section class="container">
+		<div class="tg1-success">Success - O pedaço mais habitual do Lorem Ipsum usado desde os anos 1500 é reproduzido abaixo para os interessados</div>
+		<div class="tg1-notice">Notice - O pedaço mais habitual do Lorem Ipsum usado desde os anos 1500 é reproduzido abaixo para os interessados</div>
+		<div class="tg1-alert">Alert - Há estoque disponível</div>
+		<div class="tg1-warning">Warning - Há estoque disponível</div>
+		<div class="tg1-error">Error - O pedaço mais habitual do Lorem Ipsum usado desde os anos 1500 é reproduzido abaixo para os interessados</div>
+		<div class="tg1-text">Text - O pedaço mais habitual do Lorem Ipsum usado desde os anos 1500 é reproduzido abaixo para os interessados</div>
+	</section>
+
 	<hr>
 	<section class="container">
 		<div class="tg2-success">Success - O pedaço mais habitual do Lorem Ipsum usado desde os anos 1500 é reproduzido abaixo para os interessados</div>
